--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 @import "tailwindcss";
 
+.russo-one-regular {
+  font-family: "Russo One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Russo One", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
